--- a/src/Sitecore.Support.232559/packages.config
+++ b/src/Sitecore.Support.232559/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.0.0" targetFramework="net462" />
+  <package id="SC.Microsoft.Extensions.DependencyInjection.Abstractions" version="9.0.1" targetFramework="net462" />
   <package id="SC.Sitecore.EmailCampaign" version="9.0.1" targetFramework="net462" />
   <package id="SC.Sitecore.EmailCampaign.Model" version="9.0.1" targetFramework="net462" />
   <package id="SC.Sitecore.Framework.Conditions" version="9.0.1" targetFramework="net462" />
