Makes DeployAnalytics create a campaign in Message.TargetLanguage instead of Message.Language

--- a/src/Sitecore.Support.232559/App_Config/Include/zzz/Sitecore.Support.232559.config
+++ b/src/Sitecore.Support.232559/App_Config/Include/zzz/Sitecore.Support.232559.config
@@ -1,7 +1,15 @@
-<configuration xmlns:x="http://www.sitecore.net/xmlconfig/" xmlns:role="http://www.sitecore.net/xmlconfig/role/" xmlns:exmEnabled="http://www.sitecore.net/xmlconfig/exmEnabled/">
+<configuration xmlns:x="http://www.sitecore.net/xmlconfig/" xmlns:role="http://www.sitecore.net/xmlconfig/role/" xmlns:patch="http://www.sitecore.net/xmlconfig/" xmlns:exmEnabled="http://www.sitecore.net/xmlconfig/exmEnabled/">
   <sitecore exmEnabled:require="yes" role:require="Standalone or ContentDelivery or Reporting or ContentManagement or Processing or DedicatedDispatch">
     <services>
-    <configurator type= "Sitecore.Support.CustomServiceConfigurator, Sitecore.Support.232559"/>
+      <configurator type= "Sitecore.Support.CustomServiceConfigurator, Sitecore.Support.232559"/>
     </services>
+    <pipelines>
+
+      <DispatchNewsletter exmEnabled:require="yes" role:require="(Standalone or ContentManagement) and !DedicatedDispatch">
+        <processor type="Sitecore.EmailCampaign.Cm.Pipelines.DispatchNewsletter.DeployAnalytics, Sitecore.EmailCampaign.Cm" resolve="true">
+          <patch:attribute name="type">Sitecore.Support.Pipelines.DispatchNewsletter.DeployAnalytics, Sitecore.Support.232559</patch:attribute>
+        </processor>
+      </DispatchNewsletter>
+    </pipelines>
   </sitecore>
 </configuration>
