--- a/src/Sitecore.Support.232559/Sitecore.Support.232559.csproj
+++ b/src/Sitecore.Support.232559/Sitecore.Support.232559.csproj
@@ -95,7 +95,6 @@
   <ItemGroup>
     <Compile Include="ConfigureServices.cs" />
     <Compile Include="Modules\EmailCampaign\Services\SupportExmCampaignService.cs" />
-    <Compile Include="Pipelines\DispatchNewsletter\DeployAnalytics.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -103,6 +102,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <None Include="web.config" />
   </ItemGroup>
   <PropertyGroup>
